# Honeypot-Setup

./: NEW_STRUCTURE.md  structure.txt
SecureHoney/: .env.example  DEPLOY_TO_NETLIFY.md  DOCKER_DEPLOYMENT.md  NETLIFY_DEPLOYMENT.md  README.md  RUN_GUIDE.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  netlify.toml
SecureHoney/admin-panel/: start.sh
SecureHoney/docker/: Dockerfile.admin-backend  Dockerfile.admin-frontend  Dockerfile.honeypot  Dockerfile.nginx
SecureHoney/honeypot-system/: start.sh
SecureHoney/scripts/: start_all.sh  status.sh  stop_all.sh
honeyport-project/: .env.example  .gitignore  Dockerfile  Makefile  PRESENTATION_GUIDE.md  QUICKSTART.md  README.md  STRUCTURE.md  demo_presentation.py  deploy_smart_contract.py  docker-compose.yml  main.py  perfect_demo.py  requirements-dev.txt  requirements.txt  run_dashboard.py  start_demo.py  test_attacks.py
honeyport-project/ai_models/: ensemble_predictor.py  explainability.py  feature_extraction.py  neural_networks.py  training_pipeline.py
honeyport-project/blockchain/: blockchain.py  log_manager.py  web3_manager.py
honeyport-project/core/: __init__.py  ai_behavior.py  alert_system.py  anomaly_detector.py  connection_handler.py  honeyport.py  session_manager.py
honeyport-project/dashboard/: app.py
honeyport-project/dashboard/backend/: Dockerfile  pyproject.toml
honeyport-project/dashboard/backend/src/api/: db.py  main.py  models.py
honeyport-project/dashboard/backend/src/api/routes/: agents.py  alerts.py  events.py
honeyport-project/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  (+1 more)
(+125 files in other folders)
